plugins {
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

ext {
    lombok                  = '1.18.22'
    openApi                 = '1.6.8'
    jjwt                    = '0.9.1'
    mapstruct               = '1.4.2.Final'
}

group = 'ru.gerch'
version = '1.0'
targetCompatibility = sourceCompatibility = '11'
defaultTasks 'clean', 'build'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    // Lombok
    compileOnly "org.projectlombok:lombok:$lombok"
    annotationProcessor "org.projectlombok:lombok:$lombok"

    // Spring & Spring Cloud
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Swagger
    implementation "org.springdoc:springdoc-openapi-ui:$openApi"

    // Database
    implementation 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'

    // JWT
    implementation "io.jsonwebtoken:jjwt:$jjwt"
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'


    // Mapstruct
    implementation "org.mapstruct:mapstruct:$mapstruct"
    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstruct"

    // Test
    testImplementation "org.springframework.boot:spring-boot-starter-test"
}

test {
    useJUnitPlatform()
}